# storage_interfaces

./: .gitignore  .pylintrc  .travis.yml  Makefile  README.md  setup.cfg  setup.py  tox.ini
storage_interfaces/: __version__.py  _compat.py  abstracts.py
storage_interfaces/scsi/: abstracts.py
tests/: test__storage_interfaces.py  test_readme_doctest.py
