[metadata]
name = storage_interfaces
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
summary = Abstract classes for representing storage-related objects
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Infinidat Ltd.
author_email = info@infinidat.com
url = https://github.com/Infinidat/storage_interfaces

[extras]
testing =
    astroid~=1.5.3; python_version=='2.7'
    astroid>=2.0; python_version >= '3.4'
    pylint~=1.7.2; python_version=='2.7'
    pylint~=2.3.1; python_version >= '3.4'
    pytest

[tool:pytest]
testpaths = tests

[bdist_wheel]
universal=1
