[metadata]
name = storage_interfaces
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
summary = Abstract classes for representing storage-related objects
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Infinidat Ltd.
author_email = info@infinidat.com
url = https://github.com/Infinidat/storage_interfaces

[extras]
testing =
    astroid>=2.0
    pylint~=2.3.1
    pytest

[tool:pytest]
testpaths = tests

[bdist_wheel]
universal=1
